tests/expectations/compiler/constructor/constructor_without_async_fail.out
DCE_ENABLED:
Error [EPAR0370005]: expected 'const', 'struct', 'record', 'mapping', '@', 'async', 'function', 'transition', 'inline', '}' -- found 'constructor'
    --> compiler-test:8:5
     |
   8 |     constructor() {
     |     ^^^^^^^^^^^

DCE_DISABLED:
Error [EPAR0370005]: expected 'const', 'struct', 'record', 'mapping', '@', 'async', 'function', 'transition', 'inline', '}' -- found 'constructor'
    --> compiler-test:8:5
     |
   8 |     constructor() {
     |     ^^^^^^^^^^^
